# flashchain-mtp

./: .gitignore  Cargo.toml  README.md  package.json  truffle-config.js
bridge/: Cargo.toml
bridge/contracts/: BridgeCore.sol
bridge/src/: bridge_manager.rs  lib.rs  state_sync.rs  types.rs  utils.rs
common/rust/src/: Cargo.toml  config.rs  crypto.rs  errors.rs  lib.rs  metrics.rs  types.rs  utils.rs
common/solidity/interfaces/: IFlashChain.sol  ILightningChannel.sol  ISharding.sol
common/solidity/libraries/: BytesLib.sol  Merkle.sol  SafeMath.sol
common/solidity/utils/: Ownable.sol
core/contracts/base/: BaseShardContract.sol  IShardable.sol
core/contracts/consensus/: ConsensusManager.sol  ValidatorSet.sol
core/contracts/governance/: NetworkParams.sol  ShardGovernance.sol
core/contracts/sharding/: ShardManager.sol  ShardRegistry.sol  ShardRouter.sol
core/migrations/: 2_deploy_base_contracts.js  3_deploy_shard_management.js  4_deploy_consensus.js  5_deploy_governance.js  6_set_permissions.js  7_verify_deployment.js
core/scripts/: createInitialShards.js  emergencyActions.js  initNetwork.js  maintenance.js  monitorNetwork.js  setupCrossShardRoutes.js  setupValidators.js
lightning/: Cargo.toml
lightning/benches/: bench_main.rs  channel_benchmark.rs  network_benchmarks.rs  routing_benchmarks.rs  state_benchmarks.rs
lightning/src/channel/: mod.rs  operations.rs  state.rs
lightning/src/crypto/: mod.rs  signature.rs
lightning/src/network/: mod.rs  topology.rs
lightning/src/routing/: mod.rs  path_finding.rs  payment.rs
lightning/src/state/: channel_state.rs  mod.rs  network_state.rs
modules/rust/: BuildModule.rs
modules/solidity/: BuildModule.sol
