[workspace]
members = [
    "lightning",
    "bridge",
    "common/rust", 
    "modules/rust/"
    ]

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
ethers = { version = "2.0", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
futures = "0.3"
hex = "0.4"
sha3 = "0.10"
rand = "0.8"
chrono = "0.4"
prometheus = "0.13"
lazy_static = "1.4"
