[package]
name = "flashchain-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
ethers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
sha3 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
flashchain-common = { path = "../common/rust" }

[build-dependencies]
ethers-contract-abigen = "2.0"